# summary-pdf

./: .gitignore  README.md  pyproject.toml
PDF_summarizer/: config.py  extractkeyword.py  main.py  templates.py  vector_embedding.py
__pycache/vector_embedding.cpython-311.pyc/: index.faiss  index.pkl
chromadb/: chroma.sqlite3
embeddings/: langchain_research_paper_document  samplepdf1_document  samplepdf2_document  samplepdf3_document
embeddings/langchain_research_paper/: index.faiss  index.pkl
embeddings/samplepdf1/: index.faiss  index.pkl
embeddings/samplepdf2/: index.faiss  index.pkl
embeddings/samplepdf3/: index.faiss  index.pkl
files/: samplepdf  samplepdf2
pdfsummary/: config.py  extra.txt  extractkeyword.py  main.py  main_streamlit.py  templates.py  user_input.py  vector_embedding.py
summarykeywords/: extractkeyword.py  main.py  templates.py  vector_embedding.py
